tests/baselines/reference/nodeModulesAllowJsConditionalPackageExports(module=node18).errors.txt
error TS5109: Option 'moduleResolution' must be set to 'Node18' (or left unspecified) when option 'module' is set to 'Node18'.
index.cjs(2,22): error TS2792: Cannot find module 'package/cjs'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.cjs(3,22): error TS2792: Cannot find module 'package/mjs'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.cjs(4,23): error TS2792: Cannot find module 'package'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.cjs(8,23): error TS2792: Cannot find module 'inner/a'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.cjs(9,23): error TS2792: Cannot find module 'inner/b'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.cjs(10,24): error TS2792: Cannot find module 'inner'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.cjs(11,21): error TS2792: Cannot find module 'inner/types'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.js(2,22): error TS2792: Cannot find module 'package/cjs'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.js(3,22): error TS2792: Cannot find module 'package/mjs'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.js(4,23): error TS2792: Cannot find module 'package'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.js(8,23): error TS2792: Cannot find module 'inner/a'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.js(9,23): error TS2792: Cannot find module 'inner/b'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.js(10,24): error TS2792: Cannot find module 'inner'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.js(11,21): error TS2792: Cannot find module 'inner/types'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.mjs(2,22): error TS2792: Cannot find module 'package/cjs'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.mjs(3,22): error TS2792: Cannot find module 'package/mjs'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.mjs(4,23): error TS2792: Cannot find module 'package'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.mjs(8,23): error TS2792: Cannot find module 'inner/a'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.mjs(9,23): error TS2792: Cannot find module 'inner/b'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.mjs(10,24): error TS2792: Cannot find module 'inner'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.mjs(11,21): error TS2792: Cannot find module 'inner/types'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
node_modules/inner/index.d.cts(2,22): error TS2792: Cannot find module 'inner/a'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
node_modules/inner/index.d.cts(3,22): error TS2792: Cannot find module 'inner/b'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
node_modules/inner/index.d.cts(4,23): error TS2792: Cannot find module 'inner'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
node_modules/inner/index.d.cts(5,21): error TS2792: Cannot find module 'inner/types'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
node_modules/inner/index.d.mts(2,22): error TS2792: Cannot find module 'inner/a'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
node_modules/inner/index.d.mts(3,22): error TS2792: Cannot find module 'inner/b'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
node_modules/inner/index.d.mts(4,23): error TS2792: Cannot find module 'inner'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
node_modules/inner/index.d.mts(5,21): error TS2792: Cannot find module 'inner/types'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
node_modules/inner/index.d.ts(2,22): error TS2792: Cannot find module 'inner/a'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
node_modules/inner/index.d.ts(3,22): error TS2792: Cannot find module 'inner/b'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
node_modules/inner/index.d.ts(4,23): error TS2792: Cannot find module 'inner'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
node_modules/inner/index.d.ts(5,21): error TS2792: Cannot find module 'inner/types'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?


!!! error TS5109: Option 'moduleResolution' must be set to 'Node18' (or left unspecified) when option 'module' is set to 'Node18'.
==== index.js (7 errors) ====
    // esm format file
    import * as cjs from "package/cjs";
                         ~~~~~~~~~~~~~
!!! error TS2792: Cannot find module 'package/cjs'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    import * as mjs from "package/mjs";
                         ~~~~~~~~~~~~~
!!! error TS2792: Cannot find module 'package/mjs'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    import * as type from "package";
                          ~~~~~~~~~
!!! error TS2792: Cannot find module 'package'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    cjs;
    mjs;
    type;
    import * as cjsi from "inner/a";
                          ~~~~~~~~~
!!! error TS2792: Cannot find module 'inner/a'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    import * as mjsi from "inner/b";
                          ~~~~~~~~~
!!! error TS2792: Cannot find module 'inner/b'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    import * as typei from "inner";
                           ~~~~~~~
!!! error TS2792: Cannot find module 'inner'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    import * as ts from "inner/types";
                        ~~~~~~~~~~~~~
!!! error TS2792: Cannot find module 'inner/types'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    cjsi.mjsSource;
    mjsi.mjsSource;
    typei.mjsSource;
    ts.mjsSource;
==== index.mjs (7 errors) ====
    // esm format file
    import * as cjs from "package/cjs";
                         ~~~~~~~~~~~~~
!!! error TS2792: Cannot find module 'package/cjs'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    import * as mjs from "package/mjs";
                         ~~~~~~~~~~~~~
!!! error TS2792: Cannot find module 'package/mjs'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    import * as type from "package";
                          ~~~~~~~~~
!!! error TS2792: Cannot find module 'package'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    cjs;
    mjs;
    type;
    import * as cjsi from "inner/a";
                          ~~~~~~~~~
!!! error TS2792: Cannot find module 'inner/a'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    import * as mjsi from "inner/b";
                          ~~~~~~~~~
!!! error TS2792: Cannot find module 'inner/b'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    import * as typei from "inner";
                           ~~~~~~~
!!! error TS2792: Cannot find module 'inner'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    import * as ts from "inner/types";
                        ~~~~~~~~~~~~~
!!! error TS2792: Cannot find module 'inner/types'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    cjsi.mjsSource;
    mjsi.mjsSource;
    typei.mjsSource;
    ts.mjsSource;
==== index.cjs (7 errors) ====
    // cjs format file
    import * as cjs from "package/cjs";
                         ~~~~~~~~~~~~~
!!! error TS2792: Cannot find module 'package/cjs'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    import * as mjs from "package/mjs";
                         ~~~~~~~~~~~~~
!!! error TS2792: Cannot find module 'package/mjs'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    import * as type from "package";
                          ~~~~~~~~~
!!! error TS2792: Cannot find module 'package'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    cjs;
    mjs;
    type;
    import * as cjsi from "inner/a";
                          ~~~~~~~~~
!!! error TS2792: Cannot find module 'inner/a'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    import * as mjsi from "inner/b";
                          ~~~~~~~~~
!!! error TS2792: Cannot find module 'inner/b'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    import * as typei from "inner";
                           ~~~~~~~
!!! error TS2792: Cannot find module 'inner'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    import * as ts from "inner/types";
                        ~~~~~~~~~~~~~
!!! error TS2792: Cannot find module 'inner/types'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    cjsi.cjsSource;
    mjsi.cjsSource;
    typei.implicitCjsSource;
    ts.cjsSource;
==== node_modules/inner/index.d.ts (4 errors) ====
    // cjs format file
    import * as cjs from "inner/a";
                         ~~~~~~~~~
!!! error TS2792: Cannot find module 'inner/a'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    import * as mjs from "inner/b";
                         ~~~~~~~~~
!!! error TS2792: Cannot find module 'inner/b'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    import * as type from "inner";
                          ~~~~~~~
!!! error TS2792: Cannot find module 'inner'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    import * as ts from "inner/types";
                        ~~~~~~~~~~~~~
!!! error TS2792: Cannot find module 'inner/types'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    export { cjs };
    export { mjs };
    export { type };
    export { ts };
    export const implicitCjsSource = true;
==== node_modules/inner/index.d.mts (4 errors) ====
    // esm format file
    import * as cjs from "inner/a";
                         ~~~~~~~~~
!!! error TS2792: Cannot find module 'inner/a'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    import * as mjs from "inner/b";
                         ~~~~~~~~~
!!! error TS2792: Cannot find module 'inner/b'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    import * as type from "inner";
                          ~~~~~~~
!!! error TS2792: Cannot find module 'inner'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    import * as ts from "inner/types";
                        ~~~~~~~~~~~~~
!!! error TS2792: Cannot find module 'inner/types'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    export { cjs };
    export { mjs };
    export { type };
    export { ts };
    export const mjsSource = true;
==== node_modules/inner/index.d.cts (4 errors) ====
    // cjs format file
    import * as cjs from "inner/a";
                         ~~~~~~~~~
!!! error TS2792: Cannot find module 'inner/a'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    import * as mjs from "inner/b";
                         ~~~~~~~~~
!!! error TS2792: Cannot find module 'inner/b'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    import * as type from "inner";
                          ~~~~~~~
!!! error TS2792: Cannot find module 'inner'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    import * as ts from "inner/types";
                        ~~~~~~~~~~~~~
!!! error TS2792: Cannot find module 'inner/types'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    export { cjs };
    export { mjs };
    export { type };
    export { ts };
    export const cjsSource = true;
==== package.json (0 errors) ====
    {
        "name": "package",
        "private": true,
        "type": "module",
        "exports": {
            "./cjs": "./index.cjs",
            "./mjs": "./index.mjs",
            ".": "./index.js"
        }
    }
==== node_modules/inner/package.json (0 errors) ====
    {
        "name": "inner",
        "private": true,
        "exports": {
            "./a": {
                "require": "./index.cjs",
                "node": "./index.mjs"
            },
            "./b": {
                "import": "./index.mjs",
                "node": "./index.cjs"
            },
            ".": {
                "import": "./index.mjs",
                "node": "./index.js"
            },
            "./types": {
                "types": {
                    "import": "./index.d.mts",
                    "require": "./index.d.cts",
                },
                "node": {
                    "import": "./index.mjs",
                    "require": "./index.cjs"
                }
            }
        }
    }